fix on smaller screens

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ main {
 
 .card {
   margin-left: -16px;
+  margin-right: -16px;
   padding: 8px 16px;
   background-color: hsl(0deg, 0%, 100%);
   border-bottom: 8px solid hsl(0deg, 0%, 30%);
